--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^25.2.1",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
+    "@types/ws": "^8.18.1",
     "clsx": "^2.1.1",
     "commander": "^14.0.3",
     "json5": "^2.2.3",
@@ -53,12 +54,15 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0",
+    "sharp": "^0.34.5",
     "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "ws": "^8.19.0",
-    "@types/ws": "^8.18.1"
+    "ws": "^8.19.0"
+  },
+  "devDependencies": {
+    "@types/sharp": "^0.31.1"
   }
 }
