--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-slider": "^1.3.6",
     "@tailwindcss/postcss": "^4.1.18",
+    "@twemoji/api": "^17.0.2",
     "@types/node": "^25.2.1",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
@@ -60,6 +61,7 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.7.0",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.5",
     "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
