Add CI workflow, branch protection, and open-source community files
- GitHub Actions CI: lint, test, build on PRs; auto-tag on merge
- Secret scanning on PR diffs (generic + OpenClaw-specific patterns)
- Sensitive file detection (.env, .pem, .key, castle.db, device.json, etc.)
- Large file check (>512KB) to prevent bloating git history
- console.log detection in source files (tests excluded)
- Version bump check enforced on every PR
- Job timeouts to prevent hung runners
- Branch protection: require CI + 1 review, linear history, no force push
- LICENSE (MIT), SECURITY.md, CONTRIBUTING.md
- Issue templates (bug report, feature request) and PR template

--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
   "name": "@castlekit/castle",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "The multi-agent workspace",
   "type": "module",
   "bin": {
     "castle": "./bin/castle.js"
   },
+  "files": [
+    "bin/",
+    "src/",
+    "index.js",
+    "install.sh",
+    "next.config.ts",
+    "postcss.config.mjs",
+    "tsconfig.json",
+    "drizzle.config.ts",
+    "LICENSE",
+    "README.md",
+    "!src/**/__tests__/**",
+    "!src/**/*.test.*"
+  ],
   "scripts": {
     "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start -p 3333",
     "lint": "next lint",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "ci": "npm audit --omit=dev --audit-level=high && npm test && npm run build"
   },
   "repository": {
     "type": "git",
