--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,6 +201,7 @@ jobs:
     timeout-minutes: 5
     permissions:
       contents: write
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -234,8 +235,6 @@ jobs:
           if [ "$VERSION" = "$PUBLISHED" ]; then
             echo "v$VERSION already published, skipping."
           else
-            npm publish --access public
+            npm publish --access public --provenance
             echo "Published @castlekit/castle@$VERSION"
           fi
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
