--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,6 +173,15 @@ jobs:
       - name: Check version bump
         if: github.event_name == 'pull_request'
         run: |
+          # Skip version bump check if only CI/docs files changed
+          CHANGED=$(git diff --name-only origin/main...HEAD)
+          CODE_CHANGED=$(echo "$CHANGED" | grep -v '^\.github/' | grep -v '^LICENSE' | grep -v '^CONTRIBUTING\.md' | grep -v '^SECURITY\.md' | grep -v '^\.github/.*\.md$' || true)
+
+          if [ -z "$CODE_CHANGED" ]; then
+            echo "Only CI/docs files changed — skipping version bump check."
+            exit 0
+          fi
+
           MAIN_VERSION=$(git show origin/main:package.json | node -e "process.stdin.setEncoding('utf8');let d='';process.stdin.on('data',c=>d+=c);process.stdin.on('end',()=>console.log(JSON.parse(d).version))")
           PR_VERSION=$(node -p "require('./package.json').version")
           echo "main: $MAIN_VERSION → PR: $PR_VERSION"
