Align security tooling with OpenClaw and add changelog
- Replace grep-based secret scanning with detect-secrets (v1.5.0)
  and custom Castle/OpenClaw detector plugin
- Add .secrets.baseline for tracking known-safe patterns
- Add zizmor GitHub Actions security scanner
- Add .pre-commit-config.yaml (whitespace, yaml, large files,
  detect-secrets, actionlint, zizmor)
- Add .gitattributes for consistent line endings
- Generate CHANGELOG.md from full git history
- Auto-regenerate changelog on each release in CI
- Enhance SECURITY.md: out-of-scope, web safety, runtime
  requirements, Docker guidance, scanning instructions
- Update CONTRIBUTING.md with pre-commit setup
- Fix LICENSE copyright to Brian Laughlan
- Expand version bump skip list for new config files

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ next-env.d.ts
 # design system reference (regenerate from SaaS frontend)
 CASTLE_DESIGN_SYSTEM_FULL.md
 
+# python virtual environment (for detect-secrets, pre-commit)
+.venv/
+
