--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,7 +164,7 @@ jobs:
         run: |
           # Skip version bump check if only CI/docs/config files changed
           CHANGED=$(git diff --name-only origin/main...HEAD)
-          CODE_CHANGED=$(echo "$CHANGED" | grep -v '^\.github/' | grep -v '^LICENSE' | grep -v '^CONTRIBUTING\.md' | grep -v '^SECURITY\.md' | grep -v '^CHANGELOG\.md' | grep -v '^\.gitattributes$' | grep -v '^\.detect-secrets' | grep -v '^\.pre-commit' | grep -v '^\.secrets\.baseline$' | grep -v '^zizmor\.yml$' | grep -v '^\.github/.*\.md$' || true)
+          CODE_CHANGED=$(echo "$CHANGED" | grep -v '^\.github/' | grep -v '^LICENSE' | grep -v '^CONTRIBUTING\.md' | grep -v '^SECURITY\.md' | grep -v '^CHANGELOG\.md' | grep -v '^\.gitattributes$' | grep -v '^\.gitignore$' | grep -v '^\.detect-secrets' | grep -v '^\.pre-commit' | grep -v '^\.secrets\.baseline$' | grep -v '^zizmor\.yml$' | grep -v '^\.github/.*\.md$' || true)
 
           if [ -z "$CODE_CHANGED" ]; then
             echo "Only CI/docs files changed — skipping version bump check."
