Move detect-secrets plugin to root
Flatten .detect-secrets-plugins/ directory to match OpenClaw convention.
castle_secrets.py now lives at root with PYTHONPATH=. instead of a
subdirectory with an empty __init__.py.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         if: github.event_name == 'pull_request'
         run: |
           pip install detect-secrets==1.5.0
-          export PYTHONPATH=.detect-secrets-plugins
+          export PYTHONPATH=.
 
           # Fresh scan → compare against committed baseline
           detect-secrets scan \
