--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
           - '(^|/)(dist/|\.next/|node_modules/|package-lock\.json$|\.detect-secrets\.cfg$|\.secrets\.baseline$)'
         language_version: python3
         env:
-          PYTHONPATH: .detect-secrets-plugins
+          PYTHONPATH: .
 
   # GitHub Actions linting
   - repo: https://github.com/rhysd/actionlint
