Add stress test suite (npm run stress)
Standalone stress tests covering database under load (concurrent writes,
FTS5 corruption recovery, pagination, cascade deletes, WAL pressure),
API routes (rate limiting, message size enforcement, idempotency,
concurrent channel operations), and connections (SSE subscriber storms,
event deduplication, WebSocket reconnection, pending request cleanup).

Runs separately from the main test suite — excluded from npm test.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint": "next lint",
     "test": "vitest run",
     "test:watch": "vitest",
+    "stress": "vitest run --config vitest.stress.config.ts",
     "ci": "npm audit --omit=dev --audit-level=high && npm test && npm run build"
   },
   "repository": {
