Pre-build for global installs — fix "Build failed" during npm install -g
Root cause: `npm run build` was running inside the read-only global
`node_modules` directory without devDependencies. Now the npm package
ships pre-built `.next/standalone/` artifacts via a `prepack` script,
so global installs skip the build entirely.

Changes:
- Enable Next.js `output: "standalone"` in next.config.ts
- Add `prepack` script to build + copy static assets before npm publish
- Update `files` array to include .next/standalone/ and .next/static/
- Detect pre-built output in onboarding and skip build step
- Capture build errors to ~/.castle/logs/build.log with last 20 lines shown
- Use standalone server.js in launchd/systemd templates and direct spawn
- Add Node 22+ version check at start of castle setup
- Enable Node.js compile cache in bin/castle.js (OpenClaw pattern)
- Add .next build check in `castle open` command
- Bump to v0.4.0

--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@castlekit/castle",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "The multi-agent workspace",
   "type": "module",
   "bin": {
     "castle": "./bin/castle.js"
   },
   "files": [
+    ".next/standalone/",
+    ".next/static/",
     "bin/",
     "src/",
+    "public/",
     "index.js",
     "install.sh",
     "next.config.ts",
@@ -21,6 +24,7 @@
     "!src/**/*.test.*"
   ],
   "scripts": {
+    "prepack": "next build && cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public 2>/dev/null || true",
     "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start -p 3333",
