Strip standalone node_modules to fix cross-platform native module crash
The standalone bundle was shipping node_modules/ containing platform-specific
native binaries (better-sqlite3, sharp) compiled for the build machine.
Users on different platforms would get crashes.

Fix: prepack now removes .next/standalone/node_modules/ after building.
The standalone server resolves packages via NODE_PATH pointing to the
package root's node_modules/ where npm installs correct platform binaries.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "!src/**/*.test.*"
   ],
   "scripts": {
-    "prepack": "next build && cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public 2>/dev/null || true",
+    "prepack": "next build && cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public 2>/dev/null || true && rm -rf .next/standalone/node_modules",
     "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start -p 3333",
