Add Windows support: install.ps1, Task Scheduler, and EADDRINUSE fix
- New install.ps1 PowerShell installer for Windows with Node.js
  auto-install (winget/Chocolatey/Scoop), PATH management, and
  Castle branding
- onboarding.ts now handles win32: port killing via netstat/taskkill,
  auto-start via Task Scheduler (schtasks), and OpenClaw install via
  PowerShell
- Service manager (launchctl/systemd/schtasks) is unloaded before
  killing port processes to prevent EADDRINUSE race condition
- install.sh now shows the PowerShell command for Windows users

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@castlekit/castle",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "The multi-agent workspace",
   "type": "module",
   "bin": {
@@ -14,6 +14,7 @@
     "public/",
     "index.js",
     "install.sh",
+    "install.ps1",
     "next.config.ts",
     "postcss.config.mjs",
     "tsconfig.json",
